--- a/TestMTAdmob/TestMTAdmob/TestMTAdmob.csproj
+++ b/TestMTAdmob/TestMTAdmob/TestMTAdmob.csproj
@@ -11,7 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Fody" Version="5.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="MarcTron.Admob" Version="1.2.0" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.0.0" />
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
