--- a/TestMTAdmob/TestMTAdmob.Android/Properties/AndroidManifest.xml
+++ b/TestMTAdmob/TestMTAdmob.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.TestMTAdmob">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-    <application android:label="TestMTAdmob.Android"></application>
+    <application android:label="TestMTAdmob.Android">
+      <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+      <activity android:name="com.google.android.gms.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
+    </application>
 </manifest>
