Changed code to show how to properly use events in multiple pages

--- a/TestMTAdmob/TestMTAdmob/TestMTAdmob.csproj
+++ b/TestMTAdmob/TestMTAdmob/TestMTAdmob.csproj
@@ -17,8 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="MainPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="SecondPage.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
