--- a/TestMTAdmob/TestMTAdmob.iOS/Info.plist
+++ b/TestMTAdmob/TestMTAdmob.iOS/Info.plist
@@ -34,5 +34,9 @@
     <string>TestMTAdmob</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+  <key>GADApplicationIdentifier</key>
+  <string>ca-app-pub-3940256099942544~1458002511</string>
+  <key>GADIsAdManagerApp</key>
+  <true/>
 </dict>
 </plist>
