--- a/TestMTAdmob/TestMTAdmob.iOS/TestMTAdmob.iOS.csproj
+++ b/TestMTAdmob/TestMTAdmob.iOS/TestMTAdmob.iOS.csproj
@@ -125,12 +125,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MarcTron.Admob">
-      <Version>1.4.1</Version>
+      <Version>1.4.4</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.1.0.673156" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.848062" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Xamarin.Google.iOS.MobileAds">
-      <Version>7.38.0</Version>
+      <Version>7.47.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Google.iOS.SignIn">
+      <Version>4.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
