fixes android crash on release with R8 code shrinker

--- a/TestMTAdmob/TestMTAdmob.Android/TestMTAdmob.Android.csproj
+++ b/TestMTAdmob/TestMTAdmob.Android/TestMTAdmob.Android.csproj
@@ -40,6 +40,7 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+<AndroidLinkTool>r8</AndroidLinkTool>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
@@ -96,6 +97,9 @@
       <Project>{F9407E33-C854-4897-921C-142AECF55526}</Project>
       <Name>TestMTAdmob</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProguardConfiguration Include="proguard.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
